# workout_mcp_server

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: cleanup-pr.md  create-pr.md  handle-pr-review-comments.md  implement-task.md  prime.md  update-copilot.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: Tasks.md
.github/workflows/: copilot-setup-steps.yml
ai_docs/: building-mcp-with-llms-compact.md  building-mcp-with-llms.md
data_store/: workouts.json
docs/: project-backlog.md  project-prd.md
docs/adr/: 001-testing-philosophy-and-strategy.md  002-mcp-framework-selection.md  README.md
scripts/: generate_mock_data.py
specs/: github-backlog-spec.md  spec_template.md
src/: main.py
src/workout_mcp_server/: __init__.py  __main__.py  data_loader.py  main.py
src/workout_mcp_server/tools/: __init__.py  fitness_metrics.py
tests/: test_data_loader.py  test_fitness_metrics.py  test_generate_mock_data.py  test_main.py
